# octopus

./: .gitignore  Cargo.toml  build.rs  dat.csv  ui.rc
src/: main copy.rs  main.rs  view_assets_catalog.rs
ui/: clock.css  clock.htm  clock.tis
