[package]
name = "octopus"
version = "0.1.0"
authors = ["Archimboldi <1751844336@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sciter-rs = "0.5.55"
#libloading = "0.7.0"
#libc = "0.2.91"
tiberius = "0.5.12"
once_cell = "*"
async-std = { version = "1.9.0", features = ["attributes"] }
anyhow = "1.0.40"
crossbeam-queue = "0.3.1"
crossbeam-utils = "0.8.3"

[target.'cfg(windows)'.build-dependencies]
resw = { git = "https://github.com/crlf0710/resw-rs" }