[package]
name = "octopus"
version = "0.1.0"
authors = ["Archimboldi <1751844336@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sciter-rs = "0.5.55"
#libloading = "0.7.0"
#libc = "0.2.91"
tiberius = "0.5.12"
once_cell = "*"
tokio = { version = "1.5.0", features = ["sync", "rt-multi-thread", "net", "fs", "io-util"] }
tokio-util = { version = "0.6.6", features = ["compat"] }
anyhow = "1.0.40"


[target.'cfg(windows)'.build-dependencies]
resw = { git = "https://github.com/crlf0710/resw-rs" }